hack location in

--- a/app/build.properties
+++ b/app/build.properties
@@ -1,7 +1,7 @@
 #Build Properties
-#Sat Nov 24 09:14:14 EST 2018
+#Sun Dec 09 09:54:21 UTC 2018
 version_minor=0
 version_build=0
-version_patch=3
-version_store=44
+version_patch=4
 version_major=2
+version_store=45
