--- a/app/build.properties
+++ b/app/build.properties
@@ -1,7 +1,7 @@
 #Build Properties
-#Sat Nov 24 09:14:14 EST 2018
+#Wed Jan 02 20:18:46 CST 2019
 version_minor=0
-version_build=0
+version_build=4
 version_patch=3
 version_store=44
 version_major=2
